Fix logo alignment

--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -12,3 +12,8 @@
     content: " *";
     color: red;
 }
+
+.logo .logo-lg img,
+.logo .logo-mini img {
+    vertical-align: initial;
+}
